; ModuleID = '/home/carl/AnghaBench/xLua/build/lua-5.3.5/src/extr_lgc.c_luaC_upvalbarrier_.c'
source_filename = "/home/carl/AnghaBench/xLua/build/lua-5.3.5/src/extr_lgc.c_luaC_upvalbarrier_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @luaC_upvalbarrier_(i32* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32* @G(i32* %7)
  store i32* %8, i32** %5, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32* @gcvalue(i32 %11)
  store i32* %12, i32** %6, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %14 = call i32 @upisopen(%struct.TYPE_4__* %13)
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  %18 = call i32 @lua_assert(i32 %17)
  %19 = load i32*, i32** %5, align 8
  %20 = call i64 @keepinvariant(i32* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %2
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @markobject(i32* %23, i32* %24)
  br label %26

26:                                               ; preds = %22, %2
  ret void
}

declare dso_local i32* @G(i32*) #1

declare dso_local i32* @gcvalue(i32) #1

declare dso_local i32 @lua_assert(i32) #1

declare dso_local i32 @upisopen(%struct.TYPE_4__*) #1

declare dso_local i64 @keepinvariant(i32*) #1

declare dso_local i32 @markobject(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
